Add yearly results

--- a/solarmodel.ipynb
+++ b/solarmodel.ipynb
@@ -816,7 +816,7 @@
    "source": [
     "*Note :* Hypothèse la plus cohérente :\n",
     "- Scale de la capacité installée à la fin de l'année 2021\n",
-    "- Scale du R factor pour avoir la même moyenne annuelle que l'ENTSOE"
+    "- Scale du R factor pour avoir la même moyenne annuelle que l'OFEN"
    ],
    "metadata": {
     "collapsed": false
