--- a/solarmodel2.ipynb
+++ b/solarmodel2.ipynb
@@ -2178,9 +2178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "iea_data = {\n",
     "    '2021-01-31': 38.5,\n",
     "    '2021-02-28': 112.3,\n",
@@ -2200,14 +2202,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T12:30:03.337115500Z",
-     "start_time": "2023-05-17T12:30:03.305196Z"
+     "end_time": "2023-05-17T14:36:56.676152200Z",
+     "start_time": "2023-05-17T14:36:55.034172Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "#######\n",
@@ -2225,8 +2227,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T12:30:04.746350300Z",
-     "start_time": "2023-05-17T12:30:04.144236Z"
+     "end_time": "2023-05-17T14:36:57.572789500Z",
+     "start_time": "2023-05-17T14:36:57.483352Z"
     }
    }
   },
@@ -2277,6 +2279,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Résultats :\n",
+    "- du modèle\n",
+    "- de l'IEA\n",
+    "- de Pronovo.ch"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "outputs": [
@@ -2297,6 +2311,54 @@
     "ExecuteTime": {
      "end_time": "2023-05-17T12:30:53.873337300Z",
      "start_time": "2023-05-17T12:30:53.825258400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "prod_iea    2891.8\ndtype: float64"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iea_data.sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-17T14:37:00.979403700Z",
+     "start_time": "2023-05-17T14:37:00.925305100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2842.59638"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pv.sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-17T14:37:01.315643100Z",
+     "start_time": "2023-05-17T14:37:01.235711500Z"
     }
    }
   },
