--- a/windmodel2.ipynb
+++ b/windmodel2.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-17T09:37:25.421418200Z",
-     "start_time": "2023-05-17T09:37:24.073367300Z"
+     "end_time": "2023-05-17T14:43:52.963977600Z",
+     "start_time": "2023-05-17T14:43:52.378489900Z"
     }
    },
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "from math import isnan\n",
@@ -159,30 +159,34 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:28:22.137367900Z",
-     "start_time": "2023-05-17T10:28:21.253944900Z"
+     "end_time": "2023-05-17T14:43:53.752083600Z",
+     "start_time": "2023-05-17T14:43:52.676148500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-17T14:43:53.753084800Z",
+     "start_time": "2023-05-17T14:43:53.747651600Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "                       woncfr\ntime                         \n2021-04-01 00:00:00  0.000000\n2021-04-01 01:00:00  0.000000\n2021-04-01 02:00:00  0.000000\n2021-04-01 03:00:00  0.000000\n2021-04-01 04:00:00  0.001361\n...                       ...\n1900-01-01 00:00:00  0.000000\n1900-01-01 00:00:00  0.000000\n1900-01-01 00:00:00  0.000000\n1900-01-01 00:00:00  0.000000\n1900-01-01 00:00:00  0.000000\n\n[715 rows x 1 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>woncfr</th>\n    </tr>\n    <tr>\n      <th>time</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-04-01 00:00:00</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2021-04-01 01:00:00</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2021-04-01 02:00:00</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2021-04-01 03:00:00</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2021-04-01 04:00:00</th>\n      <td>0.001361</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1900-01-01 00:00:00</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1900-01-01 00:00:00</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1900-01-01 00:00:00</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1900-01-01 00:00:00</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1900-01-01 00:00:00</th>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>715 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,14 +200,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:19:52.462268300Z",
-     "start_time": "2023-05-17T10:19:46.914131300Z"
+     "end_time": "2023-05-17T14:44:01.295934600Z",
+     "start_time": "2023-05-17T14:43:53.753084800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -223,37 +227,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:25:52.554770100Z",
-     "start_time": "2023-05-17T10:25:52.494234500Z"
+     "end_time": "2023-05-17T14:44:01.430330300Z",
+     "start_time": "2023-05-17T14:44:01.285935700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read: H_ERA5_ECMW_T639_WON_0100m_Euro_025d_S202104010000_E202104302300_CFR_MAP_01h_NA-_noc_org_NA_NA---_NA---_PhM01.nc\n",
-      "create frame\n",
-      "WARNING: 1 invalid dates removed. Data will be incomplete.\n",
-      "567 to 566\n",
-      "reducing...\n",
-      "step 1. Do from 2021-04-01 00:00:00 to 2021-04-24 13:00:00 with freq D\n",
-      "step 2\n",
-      "last capa 88.3688\n",
-      "===> Total: 4.669398661783837\n"
+      "Read: H_ERA5_ECMW_T639_WON_0100m_Euro_025d_S202104010000_E202104302300_CFR_MAP_01h_NA-_noc_org_NA_NA---_NA---_PhM01.nc\n"
      ]
     },
     {
-     "data": {
-      "text/plain": "2021-04-01 00:00:00    0.000799\n2021-04-01 01:00:00    0.001938\n2021-04-01 02:00:00    0.003606\n2021-04-01 03:00:00    0.005125\n2021-04-01 04:00:00    0.005449\n                         ...   \n2021-04-24 09:00:00    0.000000\n2021-04-24 10:00:00    0.000000\n2021-04-24 11:00:00    0.000000\n2021-04-24 12:00:00    0.000000\n2021-04-24 13:00:00    0.000000\nLength: 566, dtype: float64"
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'plants_mapped' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[10], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df8 \u001B[38;5;241m=\u001B[39m \u001B[43mdo_month\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mH_ERA5_ECMW_T639_WON_0100m_Euro_025d_S202104010000_E202104302300_CFR_MAP_01h_NA-_noc_org_NA_NA---_NA---_PhM01.nc\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m df8\n",
+      "Cell \u001B[1;32mIn[7], line 48\u001B[0m, in \u001B[0;36mdo_month\u001B[1;34m(f)\u001B[0m\n\u001B[0;32m     45\u001B[0m wind_factor \u001B[38;5;241m=\u001B[39m ds2\u001B[38;5;241m.\u001B[39mto_dataframe()\u001B[38;5;241m.\u001B[39mdropna()\n\u001B[0;32m     46\u001B[0m \u001B[38;5;28;01mdel\u001B[39;00m ds2\n\u001B[1;32m---> 48\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[43mplants_mapped\u001B[49m:\n\u001B[0;32m     49\u001B[0m     map_plants()\n\u001B[0;32m     51\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcreate frame\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'plants_mapped' is not defined"
+     ]
     }
    ],
    "source": [
@@ -263,14 +263,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:28:29.063659500Z",
-     "start_time": "2023-05-17T10:28:25.356473400Z"
+     "end_time": "2023-05-17T14:44:06.355941400Z",
+     "start_time": "2023-05-17T14:44:01.330363700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# reset cache\n",
@@ -278,18 +278,24 @@
     "unique_pos = []"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-17T14:45:40.133925800Z",
+     "start_time": "2023-05-17T14:45:40.104939200Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Read: H_ERA5_ECMW_T639_WON_0100m_Euro_025d_S202101010000_E202101312300_CFR_MAP_01h_NA-_noc_org_NA_NA---_NA---_PhM01.nc\n",
+      "Map pos...\n",
+      "68 vs 68\n",
       "create frame\n",
       "reducing...\n",
       "step 1. Do from 2021-01-01 00:00:00 to 2021-01-31 23:00:00 with freq D\n",
@@ -312,7 +318,7 @@
       "===> Total: 6.707951335042633\n",
       "Read: H_ERA5_ECMW_T639_WON_0100m_Euro_025d_S202104010000_E202104302300_CFR_MAP_01h_NA-_noc_org_NA_NA---_NA---_PhM01.nc\n",
       "create frame\n",
-      "WARNING: 1 invalid dates removed. Data will be incomplete.\n",
+      "WARNING: Invalid dates removed. Data will be incomplete.\n",
       "reducing...\n",
       "step 1. Do from 2021-04-01 00:00:00 to 2021-04-24 13:00:00 with freq D\n",
       "step 2\n",
@@ -394,20 +400,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:27:22.277959400Z",
-     "start_time": "2023-05-17T10:26:43.476844800Z"
+     "end_time": "2023-05-17T14:46:32.286958500Z",
+     "start_time": "2023-05-17T14:45:40.573605900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "[2021-01-01 00:00:00    0.001541\n 2021-01-01 01:00:00    0.001435\n 2021-01-01 02:00:00    0.000967\n 2021-01-01 03:00:00    0.000546\n 2021-01-01 04:00:00    0.000329\n                          ...   \n 2021-01-31 19:00:00    0.000000\n 2021-01-31 20:00:00    0.000000\n 2021-01-31 21:00:00    0.000000\n 2021-01-31 22:00:00    0.000000\n 2021-01-31 23:00:00    0.000000\n Length: 744, dtype: float64,\n 2021-02-01 00:00:00    0.015207\n 2021-02-01 01:00:00    0.019695\n 2021-02-01 02:00:00    0.023663\n 2021-02-01 03:00:00    0.021580\n 2021-02-01 04:00:00    0.020818\n                          ...   \n 2021-02-28 19:00:00    0.000000\n 2021-02-28 20:00:00    0.000000\n 2021-02-28 21:00:00    0.000000\n 2021-02-28 22:00:00    0.000000\n 2021-02-28 23:00:00    0.000000\n Length: 672, dtype: float64,\n 2021-03-01 00:00:00    0.000478\n 2021-03-01 01:00:00    0.000263\n 2021-03-01 02:00:00    0.000238\n 2021-03-01 03:00:00    0.000210\n 2021-03-01 04:00:00    0.000171\n                          ...   \n 2021-03-31 19:00:00    0.000000\n 2021-03-31 20:00:00    0.000000\n 2021-03-31 21:00:00    0.000000\n 2021-03-31 22:00:00    0.000000\n 2021-03-31 23:00:00    0.000000\n Length: 744, dtype: float64,\n 2021-04-01 00:00:00    0.000799\n 2021-04-01 01:00:00    0.001938\n 2021-04-01 02:00:00    0.003606\n 2021-04-01 03:00:00    0.005125\n 2021-04-01 04:00:00    0.005449\n                          ...   \n 2021-04-24 09:00:00    0.000000\n 2021-04-24 10:00:00    0.000000\n 2021-04-24 11:00:00    0.000000\n 2021-04-24 12:00:00    0.000000\n 2021-04-24 13:00:00    0.000000\n Length: 566, dtype: float64,\n 2021-05-01 00:00:00    0.000984\n 2021-05-01 01:00:00    0.000258\n 2021-05-01 02:00:00    0.000974\n 2021-05-01 03:00:00    0.003702\n 2021-05-01 04:00:00    0.002353\n                          ...   \n 2021-05-31 19:00:00    0.000000\n 2021-05-31 20:00:00    0.000000\n 2021-05-31 21:00:00    0.000000\n 2021-05-31 22:00:00    0.000000\n 2021-05-31 23:00:00    0.000000\n Length: 744, dtype: float64,\n 2021-06-01 00:00:00    0.005390\n 2021-06-01 01:00:00    0.001892\n 2021-06-01 02:00:00    0.002019\n 2021-06-01 03:00:00    0.002787\n 2021-06-01 04:00:00    0.002196\n                          ...   \n 2021-06-30 19:00:00    0.000000\n 2021-06-30 20:00:00    0.000000\n 2021-06-30 21:00:00    0.000000\n 2021-06-30 22:00:00    0.000000\n 2021-06-30 23:00:00    0.000000\n Length: 720, dtype: float64,\n 2021-07-01 00:00:00    0.005421\n 2021-07-01 01:00:00    0.005996\n 2021-07-01 02:00:00    0.006285\n 2021-07-01 03:00:00    0.006092\n 2021-07-01 04:00:00    0.003841\n                          ...   \n 2021-07-31 19:00:00    0.000000\n 2021-07-31 20:00:00    0.000000\n 2021-07-31 21:00:00    0.000000\n 2021-07-31 22:00:00    0.000000\n 2021-07-31 23:00:00    0.000000\n Length: 744, dtype: float64,\n 2021-08-01 00:00:00    0.000515\n 2021-08-01 01:00:00    0.000933\n 2021-08-01 02:00:00    0.001595\n 2021-08-01 03:00:00    0.001595\n 2021-08-01 04:00:00    0.000910\n                          ...   \n 2021-08-31 19:00:00    0.000000\n 2021-08-31 20:00:00    0.000000\n 2021-08-31 21:00:00    0.000000\n 2021-08-31 22:00:00    0.000000\n 2021-08-31 23:00:00    0.000000\n Length: 744, dtype: float64,\n 2021-09-01 00:00:00    0.018934\n 2021-09-01 01:00:00    0.015348\n 2021-09-01 02:00:00    0.013412\n 2021-09-01 03:00:00    0.012291\n 2021-09-01 04:00:00    0.011594\n                          ...   \n 2021-09-30 19:00:00    0.000000\n 2021-09-30 20:00:00    0.000000\n 2021-09-30 21:00:00    0.000000\n 2021-09-30 22:00:00    0.000000\n 2021-09-30 23:00:00    0.000000\n Length: 720, dtype: float64,\n 2021-10-01 00:00:00    0.000180\n 2021-10-01 01:00:00    0.000152\n 2021-10-01 02:00:00    0.000199\n 2021-10-01 03:00:00    0.000385\n 2021-10-01 04:00:00    0.000717\n                          ...   \n 2021-10-31 19:00:00    0.000000\n 2021-10-31 20:00:00    0.000000\n 2021-10-31 21:00:00    0.000000\n 2021-10-31 22:00:00    0.000000\n 2021-10-31 23:00:00    0.000000\n Length: 744, dtype: float64,\n 2021-11-01 00:00:00    0.010501\n 2021-11-01 01:00:00    0.015903\n 2021-11-01 02:00:00    0.012657\n 2021-11-01 03:00:00    0.015992\n 2021-11-01 04:00:00    0.023122\n                          ...   \n 2021-11-30 19:00:00    0.000000\n 2021-11-30 20:00:00    0.000000\n 2021-11-30 21:00:00    0.000000\n 2021-11-30 22:00:00    0.000000\n 2021-11-30 23:00:00    0.000000\n Length: 720, dtype: float64,\n 2021-12-01 00:00:00    0.034564\n 2021-12-01 01:00:00    0.034254\n 2021-12-01 02:00:00    0.033080\n 2021-12-01 03:00:00    0.034332\n 2021-12-01 04:00:00    0.041427\n                          ...   \n 2021-12-31 19:00:00    0.000000\n 2021-12-31 20:00:00    0.000000\n 2021-12-31 21:00:00    0.000000\n 2021-12-31 22:00:00    0.000000\n 2021-12-31 23:00:00    0.000000\n Length: 744, dtype: float64]"
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,14 +424,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:29:40.707425100Z",
-     "start_time": "2023-05-17T10:29:40.624503400Z"
+     "end_time": "2023-05-17T14:46:32.372351400Z",
+     "start_time": "2023-05-17T14:46:32.339587300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "df = pd.concat(dfs)"
@@ -433,20 +439,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:29:48.870042700Z",
-     "start_time": "2023-05-17T10:29:48.795615400Z"
+     "end_time": "2023-05-17T14:46:32.384904800Z",
+     "start_time": "2023-05-17T14:46:32.376350600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "2021-01-31    10.194309\n2021-02-28     5.857730\n2021-03-31     6.707951\n2021-04-30     4.669399\n2021-05-31     8.559113\n2021-06-30     1.263145\n2021-07-31     3.325559\n2021-08-31     2.807567\n2021-09-30     1.695740\n2021-10-31     4.940536\n2021-11-30     3.936534\n2021-12-31     9.782396\nFreq: M, dtype: float64"
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,14 +463,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:30:11.480434800Z",
-     "start_time": "2023-05-17T10:30:11.246828100Z"
+     "end_time": "2023-05-17T14:46:32.504893100Z",
+     "start_time": "2023-05-17T14:46:32.398838500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "iea_data = {\n",
@@ -486,14 +492,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:31:15.189645500Z",
-     "start_time": "2023-05-17T10:31:15.167524300Z"
+     "end_time": "2023-05-17T14:46:52.950687900Z",
+     "start_time": "2023-05-17T14:46:52.935492800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "#######\n",
@@ -511,14 +517,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:31:15.989066500Z",
-     "start_time": "2023-05-17T10:31:15.621416200Z"
+     "end_time": "2023-05-17T14:46:54.046361500Z",
+     "start_time": "2023-05-17T14:46:53.963884200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "own_monthly = df.resample('M').sum()\n",
@@ -527,14 +533,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:32:38.036722200Z",
-     "start_time": "2023-05-17T10:32:38.003125300Z"
+     "end_time": "2023-05-17T14:46:54.500148200Z",
+     "start_time": "2023-05-17T14:46:54.466382900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
@@ -557,8 +563,92 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T10:32:38.439303200Z",
-     "start_time": "2023-05-17T10:32:38.211849600Z"
+     "end_time": "2023-05-17T14:46:56.178320400Z",
+     "start_time": "2023-05-17T14:46:54.706950500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Résultats :\n",
+    "- du modèle\n",
+    "- de l'IEA\n",
+    "- de Pronovo.ch"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "63.73997873371197"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-17T14:46:56.190957800Z",
+     "start_time": "2023-05-17T14:46:56.181318100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "prod_iea    145.7\ndtype: float64"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iea_data.sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-17T14:46:56.296345700Z",
+     "start_time": "2023-05-17T14:46:56.188959700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "143.49174000000002"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pv.sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-17T14:46:56.297345300Z",
+     "start_time": "2023-05-17T14:46:56.223709400Z"
     }
    }
   },
